--- a/src/components/contact/index.scss
+++ b/src/components/contact/index.scss
@@ -66,6 +66,10 @@
         border: 1px solid #ffd700;
         float: right;
         border-radius: 4px;
+        &:hover{
+            background: #ffd700;
+            color: #fff;
+        }
     }
 }
 
